--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,9 @@
 
 {% for gallery in gallerys.all %}
 {{ gallery.description }}
+<img src="{{ gallery.image.url }}" alt="标题随便写了">
 {% endfor %}
+
 
 
 
