--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -1,25 +1,3 @@
-<!--{#<!DOCTYPE html>#}-->
-<!--{#<html lang="en">#}-->
-<!--{#<head>#}-->
-<!--{#    <meta charset="UTF-8">#}-->
-<!--{#    <title>博客</title>#}-->
-<!--{#</head>#}-->
-<!--{#<body>#}-->
-<!--{#<h1>blog</h1>#}-->
-<!--{#{% for blog in blogs.all %}#}-->
-<!--{#{{ blog.title }}#}-->
-<!--{#<br>#}-->
-<!--{#{{ blog.date }}#}-->
-<!--{#<br>#}-->
-<!--{#    <img src="{{ blog.image.url }}" height="80%">#}-->
-<!--{#<br>#}-->
-<!--{#{{ blog.text }}#}-->
-<!--{#{% endfor %}#}-->
-<!--{##}-->
-<!--{##}-->
-<!--{#</body>#}-->
-<!--{#</html>#}-->
-
 <!doctype html>
 <html lang="en">
 <style type="text/css">
@@ -34,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>Album example · Bootstrap</title>
+    <title>我的个人网站</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -64,15 +42,15 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
-          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          <h4 class="text-white">关于</h4>
+          <p class="text-muted">关于作者的简介，这里就免了。</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
+          <h4 class="text-white">联系我</h4>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-            <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
+            <li><a href="#" class="text-white">QQ</a></li>
+            <li><a href="#" class="text-white">微信</a></li>
+            <li><a href="#" class="text-white">电子邮件</a></li>
           </ul>
         </div>
       </div>
@@ -119,7 +97,6 @@
     <p class="float-right">
       <a href="#">Back to top</a>
     </p>
-    <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
     <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.3/getting-started/introduction/">getting started guide</a>.</p>
   </div>
 </footer>
