--- a/templates/home.html
+++ b/templates/home.html
@@ -14,15 +14,18 @@
 </html>
 -->
 
+
+
 <!doctype html>
 <html lang="en">
+    {% load staticfiles %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>Album example · Bootstrap</title>
+    <title>home</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -52,15 +55,15 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
-          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          <h4 class="text-white">关于</h4>
+          <p class="text-muted">关于作者的简介，这里就免了。</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
+          <h4 class="text-white">联系我</h4>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-            <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
+            <li><a href="#" class="text-white">QQ</a></li>
+            <li><a href="#" class="text-white">微信</a></li>
+            <li><a href="#" class="text-white">电子邮件</a></li>
           </ul>
         </div>
       </div>
@@ -83,11 +86,12 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">Album example</h1>
-      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+      <h1 class="jumbotron-heading">我的个人网站</h1>
+        <img src="{% static 'moban.jpg' %}" width=50%>
+      <p class="lead text-muted">这里主要展示和收集一些小道消息，请点击主页和我的简历两个按钮</p>
       <p>
         <a href="blog" class="btn btn-primary my-2">我的博客</a>
-        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+        <a href="{% static 'resume.pdf' %}" class="btn btn-secondary my-2">我的简历</a>
       </p>
     </div>
   </section>
